<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_details">Criminal Intent - edit</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter the case title</string>
    <string name="crime_date_label">Report date</string>
    <string name="crime_date_descr">Date</string>
    <string name="crime_solved">Case solved</string>
    <string name="call_police">Call police</string>
    <string name="arrow_start">First item</string>
    <string name="arrow_end">Last item</string>
    <string name="new_crime">New case</string>
    <string name="remove_crime">Delete</string>
    <string name="show_quantity">Show the number of crimes</string>
    <string name="hide_quantity">Hide the number of crimes</string>
    <string name="choose_suspect">Identify the suspect</string>
    <string name="send_report">Send report</string>
    <string name="report_text">%s: disclosed on %s, case %s, identified suspect: %s</string>
    <string name="report_text_short">%s, %s, case %s, suspect %s</string>
    <string name="solved">solved</string>
    <string name="not_solved">in progress</string>
    <string name="report_title">CriminalIntent - crime report</string>
    <string name="lack">unknown</string>
    <string name="send_report_title">Send the report using:</string>
    <string name="suspect">Suspect</string>
    <string name="call_suspect">Call the suspect</string>
    <string name="suspect_has_no_phone_number">The suspect does not have a telephone number</string>
    <string name="no_read_contact_permission">You have not granted permission to read contacts</string>
    <string name="read_contact_permission_explain">You must give permission to read the contact\'s phone number</string>
    <string name="take_photo">Take a photo</string>
    <string name="photo">Photo</string>
    <string name="photo_close">Photo, activate to close</string>
    <string name="select_from_list">Select a case from the list</string>
    <string name="photo_taken">Photo taken</string>

    <plurals name="crime_quantity">
        <item quantity="one">%d crime</item>
        <item quantity="other">%d crimes</item>
    </plurals>
</resources>