<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="crime"
            type="com.bignerdranch.android.criminalintent.data.Crime" />
        <variable
            name="dateFormattter"
            type="java.text.DateFormat" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.CrimeFragment">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_title_label" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/crime_title_hint"
            android:importantForAutofill="no"
            android:inputType="text|textCapSentences"
            android:minHeight="50sp"
            android:selectAllOnFocus="true"
            android:text="@={crime.title}"
            android:textColorHint="?attr/colorSecondaryVariant"
            tools:ignore="TextContrastCheck"></EditText>



        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_date_label" />

        <Button
            android:id="@+id/buttonDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{dateFormattter.format(crime.date)}"
            android:contentDescription="@string/crime_date_descr" />

        <CheckBox
            android:id="@+id/checkBoxSolved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={crime.solved}"
            android:text="@string/crime_solved" />

    </LinearLayout>
</layout>